--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="images\hamburger.svg" alt="">
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
           </li>
@@ -46,7 +46,10 @@
     <div class="container-fluid hero">
       <div class="opaque-bg-thing">
         <div class="row">
-          <div class="col-sm-6 ml-auto hero-text">
+          <div class="col-md-6">
+
+          </div>
+          <div class="col-md-6 hero-text">
               <h1 class="display-4">Lorem ipsum dolor sit amet,
                 consectetuer adipiscing elit,</h1>
               <p class="lead">Lorem ipsum dolor sit amet, consectetuer</p>
@@ -59,19 +62,19 @@
     <!--Section 2-->
     <div class="container-fluid section-2">
       <div class="row justify-content-center">
-        <div class="col-sm-5 section-2-col first-one">
+        <div class="col-md-5 section-2-col first-one">
           <img src="images\image1.png" class="img-fluid" alt="">
           <div class="section-2-text">
             <h2>advertise</h2>
             <p>Lorem ipsum dolor sit amet, consectetuer</p>
           </div>
         </div>
-        <div class="col-sm-1">
+        <div class="col-md-1">
           <div class="line">
 
           </div>
         </div>
-        <div class="col-sm-5 section-2-col second-one">
+        <div class="col-md-5 section-2-col second-one">
           <img src="images\image2.png" class="img-fluid" alt="">
           <div class="section-2-text">
             <h2>monetize</h2>
@@ -85,16 +88,16 @@
     <!--Section 3-->
     <div class="container-fluid section-3">
       <div class="row">
-        <div class="col-sm-1 orange-image-thing-1">
+        <div class="col-md-1 orange-image-thing-1">
          <!--carousel ke bagal wala chiz-->
         </div>
-        <div class="col-sm-10 carousel-thing">
-          <div class="section-3-text ml-auto">
+        <div class="col-md-10 carousel-thing">
+          <div class="section-3-text">
             <h2>Our Key Values.</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure itaque quis,</p>
           </div>
           <div class="row">
-            <div class="col-sm-4 card thing-1" style="width: 18rem;">
+            <div class="col-md-4 card thing-1" style="width: 18rem;">
                 <div class="card-top-thing">
                   <img class="card-img-top" src="..." alt="Card image cap">
                 </div>
@@ -103,7 +106,7 @@
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
             </div>
-            <div class="col-sm-4 card thing-2" style="width: 18rem;">
+            <div class="col-md-4 card thing-2" style="width: 18rem;">
                 <div class="card-top-thing">
                   <img class="card-img-top" src="..." alt="Card image cap">
                 </div>
@@ -112,7 +115,7 @@
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
             </div>
-            <div class="col-sm-4 card thing-3" style="width: 18rem;">
+            <div class="col-md-4 card thing-3" style="width: 18rem;">
                 <div class="card-top-thing">
                   <img class="card-img-top" src="..." alt="Card image cap">
                 </div>
@@ -125,10 +128,10 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-1 orange-image-thing">
+        <div class="col-md-1 orange-image-thing">
 
         </div>
-        <div class="col-sm-11 orange-image-thing">
+        <div class="col-md-11 orange-image-thing">
 
         </div>
       </div>
@@ -136,7 +139,7 @@
     <!---Section 3 End-->
 
     <div class="container-fluid">
-      <div class="col-sm-12 footer">
+      <div class="col-md-12 footer">
 
       </div>
     </div>
