--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="images\hamburger.svg" alt="">
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
           </li>
@@ -99,7 +99,7 @@
           <div class="row">
             <div class="col-md-4 card thing-1" style="width: 18rem;">
                 <div class="card-top-thing">
-                  <img class="card-img-top" src="..." alt="Card image cap">
+                  <img class="card-img-top" src="images\coding.png" alt="Card image cap">
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
@@ -108,7 +108,7 @@
             </div>
             <div class="col-md-4 card thing-2" style="width: 18rem;">
                 <div class="card-top-thing">
-                  <img class="card-img-top" src="..." alt="Card image cap">
+                  <img class="card-img-top" src="images\growth.png" alt="Card image cap">
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
@@ -117,7 +117,7 @@
             </div>
             <div class="col-md-4 card thing-3" style="width: 18rem;">
                 <div class="card-top-thing">
-                  <img class="card-img-top" src="..." alt="Card image cap">
+                  <img class="card-img-top" src="images\feedback.png" alt="Card image cap">
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
