--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="container-fluid section-2">
       <div class="row justify-content-center">
         <div class="col-md-5 section-2-col first-one">
-          <img src="images\image1.png" class="img-fluid" alt="">
+          <img src="https://github.com/IJustWannaLearnSomething/assesment-internshala/blob/main/images/image1.PNG" class="img-fluid" alt="">
           <div class="section-2-text">
             <h2>advertise</h2>
             <p>Lorem ipsum dolor sit amet, consectetuer</p>
